<resources>
    <string name="app_name">Submission 1</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="emptymsg">Search Not Found!</string>
    <string name="send">Kirim</string>
    <string name="search">Search</string>
    <string name="repository">Repository</string>
    <string name="zero">0</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>