<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_avatar"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:civ_border_color="@color/teal_green"
            app:civ_border_color_direction="bottom_to_top"
            app:civ_border_color_end="@color/teal_dark_green"
            app:civ_border_color_start="@color/teal_green"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/teal_dark_green"
            app:civ_shadow_gravity="center"
            app:civ_shadow_radius="7sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/img_avatar" />
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textSize="21sp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/img_avatar" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/tv_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_following_text"
                app:layout_constraintStart_toStartOf="@+id/tv_following_text"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/zero" />
            <TextView
                android:id="@+id/tv_following_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:text="@string/following"
                app:layout_constraintEnd_toStartOf="@+id/tv_follower_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_following_count" />
            <TextView
                android:id="@+id/tv_follower_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_follower_text"
                app:layout_constraintStart_toStartOf="@+id/tv_follower_text"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/zero" />
            <TextView
                android:id="@+id/tv_follower_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/followers"
                app:layout_constraintEnd_toStartOf="@+id/tv_repo_text"
                app:layout_constraintStart_toEndOf="@+id/tv_following_text"
                app:layout_constraintTop_toBottomOf="@+id/tv_follower_count" />
            <TextView
                android:id="@+id/tv_repo_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_repo_text"
                app:layout_constraintStart_toStartOf="@+id/tv_repo_text"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/zero" />
            <TextView
                android:id="@+id/tv_repo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/repository"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_follower_text"
                app:layout_constraintTop_toBottomOf="@+id/tv_repo_count" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_followers">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>